--- a/main.tex
+++ b/main.tex
@@ -443,7 +443,7 @@ for short chain alkenes  (C\(_{2}\)-C\(_{12}\)).}
 \end{table}
 
 Also compared are TD-DFT results for this system and results of a previous work of some of the authors, which match to within 3\%.\cite{drujon_pseudopotentials_2013}
-Let us recall here that in our previous work potentials were placed at the center of bonds.
+%Let us recall here that in our previous work potentials were placed at the center of bonds.
 
 \subsection{Larger chains and fused rings}
 
