--- a/main.tex
+++ b/main.tex
@@ -465,7 +465,7 @@ The $\Delta_{ST}$ values were obtained as the difference
 between the lowest triplet (in an unrestricted formalism) and the lowest singlet state
 (in a restricted formalism).
 Calculations were done at the PBE0/def-SV(P) level.
-The C\(_{54}\)H\(_{18}\) molecule is represented in figure \ref{fig:c54h18}}
+The C\(_{54}\)H\(_{18}\) molecule is represented in Figure \ref{fig:c54h18}.}
 \label{fig:rings_graphs}
 \end{figure}
 
