change units in table 1

--- a/main.tex
+++ b/main.tex
@@ -367,7 +367,7 @@ $p$  & $0$                    & $0$            & $0$  & $A=-3.91$ & $\alpha=0.62
 \hline\hline
 \end{tabular}
 \caption{\label{tab:params}Optimal parameters obtained for the pseudo 
-$\pi$ carbon atom (values in atomic units) at the HF level of theory.
+$\pi$ carbon atom at the HF/def2-SV(P) level of theory.
 Coordinates are relative to the position of the nucleus.
 In this work, $c=0.25\;a.u.$ and $d=0.5\;a.u.$.
 Coefficients are in a.u.
@@ -393,7 +393,7 @@ and its reproduction with the optimal pseudo potential obtained in this work.
 The $\Delta_{ST}$ values were obtained as the difference
 between the lowest triplet (in an unrestricted formalism) and the lowest singlet state
 (in a restricted formalism).
-Calculations are performed at the HF level, values are in atomic eV.}
+Calculations are performed at the HF/def2-SV(P) level, values are in atomic eV.}
 \end{table}
 
 \section{Results and discussion}
@@ -448,7 +448,8 @@ TD-DFT First Excitation &   - & 2.6 & 2.8 &  6.3 &  6.9 \\
 \hline\hline
 \end{tabular}
 \caption{Mean relative errors (in percent) across methods (HF or different functionals)
-for short chain alkenes  (C\(_{2}\)-C\(_{12}\)).}
+for short chain alkenes  (C\(_{2}\)-C\(_{12}\)).
+The basis set is def2-SV(P).}
 \label{table:alkene_errors}
 \end{table}
 
@@ -505,7 +506,8 @@ TD-DFT First Excitation &   - &  3.6  &    - &    - &    - \\
 \hline\hline
 \end{tabular}
 \caption{Mean relative errors (in percent) across methods (HF or different functionals)
-for ring-systems.}
+for ring-systems.
+The basis set is def2-SV(P).}
 \label{table:ring_system_errors}
 \end{table}
 
@@ -542,7 +544,8 @@ TD-DFT First Excitation &    - &  1.0   &   6.1   &   5.6    &   2.9 \\
 \hline\hline
 \end{tabular}
 \caption{Mean relative errors (in percent) across methods (HF or different functionals)
-for long chain alkenes (C\(_{20}\)-C\(_{100}\)).}
+for long chain alkenes (C\(_{20}\)-C\(_{100}\)).
+The basis set is def2-SV(P).}
 \label{table:long_alkene_errors}
 \end{table}
 
