--- a/main.tex
+++ b/main.tex
@@ -334,11 +334,15 @@ and an exponent of $10.0$.
 \label{section:csp2_extraction}
 The CH$_3^\bullet$ radical allowed us to test our model but is not useful
 when dealing with $\pi$ molecular interactions as it does not contain
-any $\pi$ bond.
+information about $\pi$ bond.
+In fact, the use of the pseudo-potential extracted in the previous section on CH$_3^\bullet$
+leads to catastrophic results when used to reproduce the ethene $\pi$ cloud (not shown here).
+Thus, a reparametrization is necessary.
+
 We intend to extract a pseudo-potential, which interacts properly with 
 other $\pi$ carrying atoms, would they be pseudo-system or real systems.
-Furthermore, we expect our hypothesis to be grounded and should be able to
-extract parameters on as few data as possible.
+Furthermore, we intend to extract parameters on the smallest system possible.
+We expect this approach to ensure the most unbiased pseudo-potential parameters. 
 Thus, we extracted the optimal pseudo-potential by a step by step procedure described in 
 the supplementary materials on the smallest $\pi$ system: the ethylene molecule.
 Based on Equation \ref{eq:ourPP}, we define the complete pseudo potential as:
@@ -374,7 +378,9 @@ Coefficients are in a.u.
 }
 \end{table}
 
-With parameters defined in Table \ref{tab:params}, the potential reproduces the properties of the ethylene $\pi$ cloud system with a good accuracy: relative errors on the ionisation energy and the energies of the HOMO orbital of 8\% and 3\% respectively (Table \ref{tab:res_ourPP}).
+With parameters defined in Table \ref{tab:params}, the potential reproduces the properties
+of the ethylene $\pi$ cloud system with a good accuracy: relative errors on the ionisations
+energy and the energies of the HOMO orbital of 80\% and 3\% respectively (Table \ref{tab:res_ourPP}).
 
 \begin{table}[ht]
 \begin{tabular}{llll}
@@ -398,8 +404,26 @@ Calculations are performed at the HF/def2-SV(P) level, values are in atomic eV.}
 
 \section{Results and discussion}
 
-\subsection{Computational Details}
+\subsection{Preliminary note}
+The extraction done in the previous section was at the HF/def2-SV(P) level.
+We intend to show that there is no need for reparametrisation of the potential
+when used in another framework.
+Thus, in the following sections, we use HF and four functionals in the DFT framework:
+one GGA (PBE), one meta-GGA (TPSS) and their hybrid variants (PBE0 and TPSSh).
+Furthermore, the parametrization was done with ground state calculations only:
+the $\Delta_{ST}$ values are obtained as a difference between the lowest singlet (ground state)
+and the lowest triplet (ground state in the triplet space).
+Yet, we shall use this potential in the TD-DFT framework, which uses the virtual orbitals.
+We show in the last section that results obtained within the TD-DFT framework
+match the reference calculations from both the quantitative (excitation energies match)
+and qualitative (excitations are described by the same orbitals) point of view.
+Finally, despite the fact that the extraction was done on a non aromatic system,
+we perform calculations on fused ring aromatic systems.
+Again, these calculations are succesfull.
+As a consequence, one can say that the potential extracted on ethene at the HF/def2-SV(P)
+level is free of obvious transferability problems.
 
+\subsection{Computational Details}
 All Hartree-Fock (HF), Density Functional Theory (DFT) and Time-Dependent DFT (TD-DFT) calculations
 are performed with TURBOMOLE 7.1 \cite{TURBOMOLE}.
 The basis set used throughout is def2-SV(P) \cite{defsvp}.
@@ -411,7 +435,7 @@ When running these calculations the occupation of orbitals is specified manually
 
 \subsection{Alkene chains: C\(\mathbf{_{2n}}\)H\(\mathbf{_{2n+2}}\), \(\mathbf{2 \leq n \leq 12}\)}
 
-Taking these optimal parameters we test them against a series of chain alkenes up to length C\(_{12}\)H\(_{14}\), using a variety of functionals. In each case, the geometry of the reference system is optimised according to the method used, 
+Taking the optimal parameters we test them against a series of chain alkenes up to length C\(_{12}\)H\(_{14}\), using a variety of functionals. In each case, the geometry of the reference system is optimised according to the method used, 
 before taking the reference geometry and applying the pseudo-potentials from Table \ref{tab:res_ourPP}. 
 Figure \ref{fig:alkenes_hf_dft} shows the results.
 Table \ref{table:alkene_errors} gives a breakdown of the percentage errors for each method across all molecules tested. The pattern of increasing HOMO energy and decreasing cation-singlet and triplet-singlet energies seen in the reference systems is well replicated by the pseudo-alkenes, with the energies following the same gradient.
